test/fail/session-entity-prop-redefined-1.app
//Property 'name' of entity 'User' is defined multiple times.

application test

  session user{
    name :: String
  }
  
  extend session user{
    name :: Int
  }
